objects/vlocity_cmt__DRWorker__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Each worker represents a possible Apex Batch Job that can be created at run time by the Vlocity Data Mapper service.  Use this to control the number of Data Mapper workers processing batches from the batch queue simultaneously.</description>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <description>Action being performed</description>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApexJobId__c</fullName>
        <description>Job Id of this Worker</description>
        <label>Apex Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRBundleName__c</fullName>
        <label>Data Mapper Bundle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRObjectName__c</fullName>
        <description>Name of Data Mapper Object being processed currently.</description>
        <label>Data Mapper Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRStatus__c</fullName>
        <description>Status being processed</description>
        <label>Data Mapper Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartedAt__c</fullName>
        <description>Time when Data Mapper Batch Job began.</description>
        <label>Started At</label>
        <type>DateTime</type>
    </fields>
    <label>Data Mapper Workers</label>
</CustomObject>